fix spacing and padding

--- a/src/app/custom-styles.css
+++ b/src/app/custom-styles.css
@@ -107,7 +107,6 @@ ul {
   margin-bottom: 1em;
   margin-top: 1em;
   line-height: 1.5;
-  padding-left: 3ch;
   list-style: disc;
 }
 ul:last-child {
